fixed menu spacing

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -14,15 +14,20 @@
   }
 
   .header_nav a {
-    //color: $color--white;
-    display: none; 
-    opacity: 0; 
-
-    @media (min-width: $large) {
       display: inline-block; 
       opacity: 1; 
       padding: 0 12px; 
     }
+}
+
+.header_nav {
+  display: none; 
+  opacity: 0; 
+  margin: 0 auto; 
+  
+  @media (min-width: $large) {
+    display: block; 
+    opacity: 1;
   }
 }
 
